// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ContributorRow Row should be clickable when showContributorAssignment set to true 1`] = `
<div>
  <li
    aria-label="Select this record (J. Smith) to assign it to you"
    class="MuiListItem-root makeStyles-listItem-288 MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-zl9c03-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGrid-root MuiGrid-container makeStyles-listContainer-287 css-11lq3yg-MuiGrid-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-12l3zot-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="PersonOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-md-3 css-1lhy94w-MuiGrid-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root makeStyles-primary-294  MuiTypography-body2 MuiTypography-noWrap css-13796ou-MuiTypography-root"
          >
            J. Smith
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-nl826q-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-md-5 css-1dnx02d-MuiGrid-root"
        data-testid="test-list-row-0-uq-details"
        id="test-list-row-0-uq-details"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root makeStyles-primary-294  MuiTypography-body2 MuiTypography-noWrap css-13796ou-MuiTypography-root"
          >
            Professor J Researcher
          </p>
          <span
            class="MuiTypography-root   MuiTypography-caption MuiTypography-noWrap css-nl826q-MuiTypography-root"
          >
            The University of Queensland (uqresearcher - 410)
          </span>
        </div>
      </div>
      <div
        class="makeStyles-actionsContainer-298"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <button
          aria-label="Remove this record"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="test-list-row-0-delete"
          data-mui-internal-clone-element="true"
          data-testid="test-list-row-0-delete"
          id="test-list-row-delete-0"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="DeleteIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow Row should not be clickable when showContributorAssignment set to false 1`] = `
<div>
  <li
    aria-label="Select this record (J. Smith) to assign it to you"
    class="MuiListItem-root makeStyles-listItem-301 MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-zl9c03-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGrid-root MuiGrid-container makeStyles-listContainer-300 css-11lq3yg-MuiGrid-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-12l3zot-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="PersonOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-md-3 css-1lhy94w-MuiGrid-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root makeStyles-primary-307  MuiTypography-body2 MuiTypography-noWrap css-13796ou-MuiTypography-root"
          >
            J. Smith
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-nl826q-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-md-5 css-1dnx02d-MuiGrid-root"
        data-testid="test-list-row-0-uq-details"
        id="test-list-row-0-uq-details"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root makeStyles-primary-307  MuiTypography-body2 MuiTypography-noWrap css-13796ou-MuiTypography-root"
          >
            Professor J Researcher
          </p>
          <span
            class="MuiTypography-root   MuiTypography-caption MuiTypography-noWrap css-nl826q-MuiTypography-root"
          >
            The University of Queensland (uqresearcher - 410)
          </span>
        </div>
      </div>
      <div
        class="makeStyles-actionsContainer-311"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <button
          aria-label="Remove this record"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="test-list-row-0-delete"
          data-mui-internal-clone-element="true"
          data-testid="test-list-row-0-delete"
          id="test-list-row-delete-0"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="DeleteIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow a row with index and contributor set, renders only name and delete button 1`] = `
<div>
  <li
    aria-label="Select this record (A. Smith) to assign it to you"
    class="MuiListItem-root makeStyles-listItem-2 MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-zl9c03-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGrid-root MuiGrid-container makeStyles-listContainer-1 css-11lq3yg-MuiGrid-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-12l3zot-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="PersonOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-md-3 css-1lhy94w-MuiGrid-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root makeStyles-primary-8  MuiTypography-body2 MuiTypography-noWrap css-13796ou-MuiTypography-root"
          >
            A. Smith
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-nl826q-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="makeStyles-actionsContainer-12"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <button
          aria-label="Remove this record"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="test-list-row-0-delete"
          data-mui-internal-clone-element="true"
          data-testid="test-list-row-0-delete"
          id="test-list-row-delete-0"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="DeleteIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow a row with index and contributor set, renders only name and delete button for mobile view 1`] = `
<div>
  <li
    aria-label="Select this record (A. Smith) to assign it to you"
    class="MuiListItem-root makeStyles-listItem-28 MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-zl9c03-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGrid-root MuiGrid-container makeStyles-listContainer-27 css-11lq3yg-MuiGrid-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-12l3zot-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="PersonOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-md-3 css-1lhy94w-MuiGrid-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root makeStyles-primary-34  MuiTypography-body2 MuiTypography-noWrap css-13796ou-MuiTypography-root"
          >
            A. Smith
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-nl826q-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="makeStyles-actionsContainer-38"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <button
          aria-label="Remove this record"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="test-list-row-0-delete"
          data-mui-internal-clone-element="true"
          data-testid="test-list-row-0-delete"
          id="test-list-row-delete-0"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="DeleteIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow a row with index and contributor set, renders reorder buttons, contributor assignment & delete button 1`] = `
<div>
  <li
    aria-label="Select this record (J. Smith) to assign it to you"
    class="MuiListItem-root makeStyles-listItem-119 MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-zl9c03-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGrid-root MuiGrid-container makeStyles-listContainer-118 css-11lq3yg-MuiGrid-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-12l3zot-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="PersonOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-md-3 css-1lhy94w-MuiGrid-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root makeStyles-primary-125  MuiTypography-body2 MuiTypography-noWrap css-13796ou-MuiTypography-root"
          >
            J. Smith
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-nl826q-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-md-5 css-1dnx02d-MuiGrid-root"
        data-testid="test-list-row-0-uq-details"
        id="test-list-row-0-uq-details"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root makeStyles-primary-125  MuiTypography-body2 MuiTypography-noWrap css-13796ou-MuiTypography-root"
          >
            Professor J Researcher
          </p>
          <span
            class="MuiTypography-root   MuiTypography-caption MuiTypography-noWrap css-nl826q-MuiTypography-root"
          >
            The University of Queensland (uqresearcher - 410)
          </span>
        </div>
      </div>
      <div
        class="makeStyles-actionsContainer-129"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <button
          aria-label="Move record up the order"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="test-list-row-0-move-up"
          data-mui-internal-clone-element="true"
          data-testid="test-list-row-0-move-up"
          id="test-list-row-move-up-0"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="KeyboardArrowUpIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="Move record down the order"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="test-list-row-0-move-down"
          data-mui-internal-clone-element="true"
          data-testid="test-list-row-0-move-down"
          id="test-list-row-move-down-0"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="KeyboardArrowDownIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="Remove this record"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="test-list-row-0-delete"
          data-mui-internal-clone-element="true"
          data-testid="test-list-row-0-delete"
          id="test-list-row-delete-0"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="DeleteIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow a row with index and contributor with author details set and set as selected 1`] = `
<div>
  <li
    aria-label="Select this record (J. Smith) to assign it to you"
    class="MuiListItem-root makeStyles-listItem-41 makeStyles-rowSelected-44 MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-zl9c03-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGrid-root MuiGrid-container makeStyles-listContainer-40 css-11lq3yg-MuiGrid-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root makeStyles-selected-45 css-12l3zot-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="PersonIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-md-3 css-1lhy94w-MuiGrid-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root makeStyles-primary-47 makeStyles-selected-45 MuiTypography-body2 MuiTypography-noWrap css-13796ou-MuiTypography-root"
          >
            J. Smith
          </p>
          <span
            class="MuiTypography-root makeStyles-selected-45 MuiTypography-caption MuiTypography-noWrap css-nl826q-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="makeStyles-actionsContainer-51"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <button
          aria-label="Remove this record"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="test-list-row-0-delete"
          data-mui-internal-clone-element="true"
          data-testid="test-list-row-0-delete"
          id="test-list-row-delete-0"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-selected-45 MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="DeleteIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow a row with index and contributor with author details set and set as selected for mobile view 1`] = `
<div>
  <li
    aria-label="Select this record (J. Smith) to assign it to you"
    class="MuiListItem-root makeStyles-listItem-80 makeStyles-rowSelected-83 MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-zl9c03-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGrid-root MuiGrid-container makeStyles-listContainer-79 css-11lq3yg-MuiGrid-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root makeStyles-selected-84 css-12l3zot-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="PersonIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-md-3 css-1lhy94w-MuiGrid-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root makeStyles-primary-86 makeStyles-selected-84 MuiTypography-body2 MuiTypography-noWrap css-13796ou-MuiTypography-root"
          >
            J. Smith
          </p>
          <span
            class="MuiTypography-root makeStyles-selected-84 MuiTypography-caption MuiTypography-noWrap css-nl826q-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="makeStyles-actionsContainer-90"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <button
          aria-label="Remove this record"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="test-list-row-0-delete"
          data-mui-internal-clone-element="true"
          data-testid="test-list-row-0-delete"
          id="test-list-row-delete-0"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-selected-84 MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="DeleteIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow a row with index and contributor with author details set, contributor author details & delete button 1`] = `
<div>
  <li
    aria-label="Select this record (J. Smith) to assign it to you"
    class="MuiListItem-root makeStyles-listItem-106 MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-zl9c03-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGrid-root MuiGrid-container makeStyles-listContainer-105 css-11lq3yg-MuiGrid-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-12l3zot-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="PersonOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-md-3 css-1lhy94w-MuiGrid-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root makeStyles-primary-112  MuiTypography-body2 MuiTypography-noWrap css-13796ou-MuiTypography-root"
          >
            J. Smith
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-nl826q-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-md-5 css-1dnx02d-MuiGrid-root"
        data-testid="test-list-row-0-uq-details"
        id="test-list-row-0-uq-details"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root makeStyles-primary-112  MuiTypography-body2 MuiTypography-noWrap css-13796ou-MuiTypography-root"
          >
            Professor J Researcher
          </p>
          <span
            class="MuiTypography-root   MuiTypography-caption MuiTypography-noWrap css-nl826q-MuiTypography-root"
          >
            The University of Queensland (uqresearcher - 410)
          </span>
        </div>
      </div>
      <div
        class="makeStyles-actionsContainer-116"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <button
          aria-label="Remove this record"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="test-list-row-0-delete"
          data-mui-internal-clone-element="true"
          data-testid="test-list-row-0-delete"
          id="test-list-row-delete-0"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="DeleteIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow a row with index and creator with creator role set and set as selected 1`] = `
<div>
  <li
    aria-label="Select this record (J. Smith) to assign it to you"
    class="MuiListItem-root makeStyles-listItem-67 makeStyles-rowSelected-70 MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-zl9c03-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGrid-root MuiGrid-container makeStyles-listContainer-66 css-11lq3yg-MuiGrid-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root makeStyles-selected-71 css-12l3zot-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="PersonIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-md-3 css-1lhy94w-MuiGrid-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root makeStyles-primary-73 makeStyles-selected-71 MuiTypography-body2 MuiTypography-noWrap css-13796ou-MuiTypography-root"
          >
            J. Smith
          </p>
          <span
            class="MuiTypography-root makeStyles-selected-71 MuiTypography-caption MuiTypography-noWrap css-nl826q-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-5 css-urj5pv-MuiGrid-root"
        data-testid="test-list-row-0-role"
        id="test-list-row-0-role"
      >
        <div
          class="MuiListItemText-root css-tlelie-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root makeStyles-primary-73 makeStyles-selected-71 MuiTypography-body2 MuiTypography-noWrap css-13796ou-MuiTypography-root"
          >
            Investigator
          </p>
        </div>
      </div>
      <div
        class="makeStyles-actionsContainer-77"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <button
          aria-label="Remove this record"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="test-list-row-0-delete"
          data-mui-internal-clone-element="true"
          data-testid="test-list-row-0-delete"
          id="test-list-row-delete-0"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-selected-71 MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="DeleteIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow a row with index and creator with creator role set and set as selected for mobile view 1`] = `
<div>
  <li
    aria-label="Select this record (J. Smith) to assign it to you"
    class="MuiListItem-root makeStyles-listItem-93 makeStyles-rowSelected-96 MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-zl9c03-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGrid-root MuiGrid-container makeStyles-listContainer-92 css-11lq3yg-MuiGrid-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root makeStyles-selected-97 css-12l3zot-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="PersonIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-md-3 css-1lhy94w-MuiGrid-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root makeStyles-primary-99 makeStyles-selected-97 MuiTypography-body2 MuiTypography-noWrap css-13796ou-MuiTypography-root"
          >
            J. Smith
          </p>
          <span
            class="MuiTypography-root makeStyles-selected-97 MuiTypography-caption MuiTypography-noWrap css-nl826q-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-5 css-urj5pv-MuiGrid-root"
        data-testid="test-list-row-0-role"
        id="test-list-row-0-role"
      >
        <div
          class="MuiListItemText-root css-tlelie-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root makeStyles-primary-99 makeStyles-selected-97 MuiTypography-body2 MuiTypography-noWrap css-13796ou-MuiTypography-root"
          >
            Investigator
          </p>
        </div>
      </div>
      <div
        class="makeStyles-actionsContainer-103"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <button
          aria-label="Remove this record"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="test-list-row-0-delete"
          data-mui-internal-clone-element="true"
          data-testid="test-list-row-0-delete"
          id="test-list-row-delete-0"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-selected-97 MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="DeleteIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow should handle edits 1`] = `
<div>
  <li
    aria-label="Select this record (A. Smith) to assign it to you"
    class="MuiListItem-root makeStyles-listItem-249 MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-zl9c03-MuiListItem-root"
    data-testid="test-list-row-2"
    id="test-list-row-2"
    tabindex="0"
  >
    <div
      class="MuiGrid-root MuiGrid-container makeStyles-listContainer-248 css-11lq3yg-MuiGrid-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-12l3zot-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="PersonOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-md-3 css-1lhy94w-MuiGrid-root"
        data-testid="test-list-row-2-name-as-published"
        id="test-list-row-2-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root makeStyles-primary-255  MuiTypography-body2 MuiTypography-noWrap css-13796ou-MuiTypography-root"
          >
            A. Smith
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-nl826q-MuiTypography-root"
          >
            Third  listed contributor
          </span>
        </div>
      </div>
      <div
        class="makeStyles-actionsContainer-259"
        data-testid="test-list-row-2-actions"
        id="test-list-row-2-actions"
      >
        <button
          aria-label="Edit this record"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="test-list-row-2-edit"
          data-mui-internal-clone-element="true"
          data-testid="test-list-row-2-edit"
          id="test-list-row-edit-2"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="EditIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="Remove this record"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="test-list-row-2-delete"
          data-mui-internal-clone-element="true"
          data-testid="test-list-row-2-delete"
          id="test-list-row-delete-2"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="DeleteIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow should render a row with a disabled contributor 1`] = `
<div>
  <li
    aria-label="Select this record (undefined) to assign it to you"
    class="MuiListItem-root makeStyles-listItem-54 makeStyles-disabledListItem-55 MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-zl9c03-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="-1"
  >
    <div
      class="MuiGrid-root MuiGrid-container makeStyles-listContainer-53 css-11lq3yg-MuiGrid-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-12l3zot-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          aria-label="You are not able to edit this row"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="LockIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
          />
        </svg>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-md-3 css-1lhy94w-MuiGrid-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root css-tlelie-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-nl826q-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="makeStyles-actionsContainer-64"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <button
          aria-label="Remove this record"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="test-list-row-0-delete"
          data-mui-internal-clone-element="true"
          data-testid="test-list-row-0-delete"
          id="test-list-row-delete-0"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="DeleteIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow should render contributor row linked class for admin users 1`] = `
<div>
  <li
    aria-label="Select this record (Test) to assign it to you"
    class="MuiListItem-root makeStyles-listItem-353 makeStyles-highlighted-355 makeStyles-contributorLinked-362 MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-zl9c03-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGrid-root MuiGrid-container makeStyles-listContainer-352 css-11lq3yg-MuiGrid-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-12l3zot-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="HowToRegIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="m9 17 3-2.94c-.39-.04-.68-.06-1-.06-2.67 0-8 1.34-8 4v2h9l-3-3zm2-5c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m4.47 8.5L12 17l1.4-1.41 2.07 2.08 5.13-5.17 1.4 1.41z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-md-3 css-1lhy94w-MuiGrid-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root makeStyles-primary-359  MuiTypography-body2 MuiTypography-noWrap css-13796ou-MuiTypography-root"
          >
            Test
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-nl826q-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="makeStyles-actionsContainer-363"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <button
          aria-label="Edit this record"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="test-list-row-0-edit"
          data-mui-internal-clone-element="true"
          data-testid="test-list-row-0-edit"
          id="test-list-row-edit-0"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="EditIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="Remove this record"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="test-list-row-0-delete"
          data-mui-internal-clone-element="true"
          data-testid="test-list-row-0-delete"
          id="test-list-row-delete-0"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="DeleteIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow should render row as required 1`] = `
<div>
  <li
    aria-label="Select this record (Test) to assign it to you"
    class="MuiListItem-root makeStyles-listItem-340 makeStyles-highlighted-342 MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-zl9c03-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGrid-root MuiGrid-container makeStyles-listContainer-339 css-11lq3yg-MuiGrid-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-12l3zot-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="PersonOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-md-3 css-1lhy94w-MuiGrid-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root makeStyles-primary-346  MuiTypography-body2 MuiTypography-noWrap css-13796ou-MuiTypography-root"
          >
            Test
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-nl826q-MuiTypography-root"
          >
            First  listed contributor
          </span>
        </div>
      </div>
      <div
        class="makeStyles-actionsContainer-350"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <button
          aria-label="Remove this record"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="test-list-row-0-delete"
          data-mui-internal-clone-element="true"
          data-testid="test-list-row-0-delete"
          id="test-list-row-delete-0"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="DeleteIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRow should render with missing aria label if selectHint prop is falsy 1`] = `
<div>
  <li
    aria-label=""
    class="MuiListItem-root makeStyles-listItem-15 MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-zl9c03-MuiListItem-root"
    data-testid="test-list-row-0"
    id="test-list-row-0"
    tabindex="0"
  >
    <div
      class="MuiGrid-root MuiGrid-container makeStyles-listContainer-14 css-11lq3yg-MuiGrid-root"
      id="contributor-row"
    >
      <div
        class="MuiListItemIcon-root css-12l3zot-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="PersonOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m0 10c2.7 0 5.8 1.29 6 2H6c.23-.72 3.31-2 6-2m0-12C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 10c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 MuiGrid-grid-md-3 css-1lhy94w-MuiGrid-root"
        data-testid="test-list-row-0-name-as-published"
        id="test-list-row-0-name-as-published"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <p
            class="MuiTypography-root makeStyles-primary-21  MuiTypography-body2 MuiTypography-noWrap css-13796ou-MuiTypography-root"
          >
            A. Smith
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-nl826q-MuiTypography-root"
          >
            First undefined
          </span>
        </div>
      </div>
      <div
        class="makeStyles-actionsContainer-25"
        data-testid="test-list-row-0-actions"
        id="test-list-row-0-actions"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-bc0omg-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="test-list-row-0-delete"
          data-mui-internal-clone-element="true"
          data-testid="test-list-row-0-delete"
          id="test-list-row-delete-0"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="DeleteIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </li>
</div>
`;
